# rust

./: README.md
module00/ex01/: min.rs
module00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module00/ex03/: fizzbuzz.rs
module00/ex04/: Cargo.toml
module00/ex04/src/: other.rs  overflow.rs
module01/ex00/src/: lib.rs
module01/ex01/src/: lib.rs
module01/ex02/src/: lib.rs
module01/ex03/src/: lib.rs
module01/ex04/src/: lib.rs
module01/ex05/src/: lib.rs
module02/ex00/src/: main.rs
module02/ex01/src/: lib.rs
module02/ex02/src/: lib.rs
